feat: add start and send message feature
